--- a/Solve_data3/build.xml
+++ b/Solve_data3/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Solve_data1_and_2" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Solve_data1_and_2.</description>
+<project name="Solve_data3" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Solve_data3.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Solve_data1_and_2-impl.jar">
+        <target name="run" depends="Solve_data3-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
