--- a/Solve_data3/nbproject/project.properties
+++ b/Solve_data3/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Solve_data1_and_2.jar
+dist.jar=${dist.dir}/Solve_data3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
